[TP2] Añadidas nuevas acciones y las modificaciones correspondientes en el ambiente.